--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,59 +7,14 @@ height: 2104px;
 background: #FFFFFF;
 
 
-/* Rectangle 17 */
-
-position: absolute;
-width: 243px;
-height: 74px;
-left: 599px;
-top: 1762px;
-
-background: #BF9350;
-border-radius: 24px;
-
-
-/* Rectangle 10 */
+/* Header */
 
 position: absolute;
 width: 1440px;
-height: 770px;
+height: 98px;
 left: 0px;
-top: 754px;
+top: 0px;
 
-background: #F3F3F3;
-
-
-/* Group 2 */
-
-position: absolute;
-width: 1440px;
-height: 659px;
-left: 0px;
-top: 95px;
-
-
-
-/* Rectangle 3 */
-
-position: absolute;
-width: 1440px;
-height: 659px;
-left: 0px;
-top: 95px;
-
-background: url(baiq-daling-K63facPD8gg-unsplash.jpg);
-
-
-/* Rectangle 4 */
-
-position: absolute;
-width: 1440px;
-height: 659px;
-left: 0px;
-top: 95px;
-
-background: linear-gradient(180deg, rgba(255, 190, 91, 0) 0%, rgba(255, 190, 91, 0.74) 100%);
 
 
 /* Rectangle 1 */
@@ -73,26 +28,7 @@ top: 0px;
 background: rgba(255, 205, 130, 0.74);
 
 
-/* D11 */
-
-position: absolute;
-width: 58px;
-height: 44px;
-left: 40px;
-top: 27px;
-
-font-family: Montserrat;
-font-style: normal;
-font-weight: bold;
-font-size: 36px;
-line-height: 44px;
-/* identical to box height */
-
-color: #000000;
-
-
-
-/* Group 1 */
+/* Log In */
 
 position: absolute;
 width: 162px;
@@ -131,19 +67,82 @@ color: #000000;
 
 
 
-/* LOREM IPSUM */
+/* D11 */
 
 position: absolute;
-width: 481px;
-height: 71px;
-left: 479px;
-top: 305px;
+width: 58px;
+height: 44px;
+left: 40px;
+top: 27px;
 
 font-family: Montserrat;
 font-style: normal;
-font-weight: 900;
-font-size: 63px;
-line-height: 77px;
+font-weight: bold;
+font-size: 36px;
+line-height: 44px;
+/* identical to box height */
+
+color: #000000;
+
+
+
+/* Top */
+
+position: absolute;
+width: 1440px;
+height: 659px;
+left: 0px;
+top: 95px;
+
+
+
+/* Header gradation */
+
+position: absolute;
+width: 1440px;
+height: 659px;
+left: 0px;
+top: 95px;
+
+
+
+/* Rectangle 3 */
+
+position: absolute;
+width: 1440px;
+height: 659px;
+left: 0px;
+top: 95px;
+
+background: url(baiq-daling-K63facPD8gg-unsplash.jpg);
+
+
+/* Rectangle 4 */
+
+position: absolute;
+width: 1440px;
+height: 659px;
+left: 0px;
+top: 95px;
+
+background: linear-gradient(180deg, rgba(255, 190, 91, 0) 0%, rgba(255, 190, 91, 0.74) 100%);
+
+
+/* Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit */
+
+position: absolute;
+width: 1109px;
+height: 35px;
+left: 165px;
+top: 496px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 26px;
+line-height: 35px;
+/* identical to box height */
+text-transform: capitalize;
 
 color: #000000;
 
@@ -168,111 +167,367 @@ color: #000000;
 
 
 
-/* Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit */
+/* LOREM IPSUM */
 
 position: absolute;
-width: 1109px;
-height: 35px;
-left: 165px;
-top: 496px;
+width: 481px;
+height: 71px;
+left: 479px;
+top: 305px;
+
+font-family: Montserrat;
+font-style: normal;
+font-weight: 900;
+font-size: 63px;
+line-height: 77px;
+
+color: #000000;
+
+
+
+/* Lessons */
+
+position: absolute;
+width: 1440px;
+height: 770px;
+left: 0px;
+top: 754px;
+
+
+
+/* Rectangle 10 */
+
+position: absolute;
+width: 1440px;
+height: 770px;
+left: 0px;
+top: 754px;
+
+background: #F3F3F3;
+
+
+/* laksa */
+
+position: absolute;
+width: 211px;
+height: 448px;
+left: 1186px;
+top: 950px;
+
+
+
+/* Laksa Tangerang bahan utamanya semacam bihun tapi tebalnya seperti spaghetti dan terbuat dari beras. Kemudian disiram dengan kuah Laksa dari kacang ijo, kentang, santan dan kaldu ayam. Sebelum disajikan masakan ini diberi taburan daun kucai yang dirajang */
+
+position: absolute;
+width: 187px;
+height: 124px;
+left: 1198px;
+top: 1274px;
 
 font-family: Playfair Display;
 font-style: normal;
 font-weight: normal;
-font-size: 26px;
-line-height: 35px;
-/* identical to box height */
+font-size: 12px;
+line-height: 16px;
+text-align: center;
 text-transform: capitalize;
 
 color: #000000;
 
 
 
-/* Neque porro quisquam */
-
-position: absolute;
-width: 294px;
-height: 37px;
-left: 573px;
-top: 840px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 28px;
-line-height: 37px;
-text-transform: capitalize;
-
-color: #000000;
-
-
-
-/* Neque porro quisquam */
-
-position: absolute;
-width: 378px;
-height: 48px;
-left: 531px;
-top: 1631px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 36px;
-line-height: 48px;
-/* identical to box height */
-text-transform: capitalize;
-
-color: #000000;
-
-
-
-/* Logo Progate Maybe? */
-
-position: absolute;
-width: 343px;
-height: 45px;
-left: 548px;
-top: 1992px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 36px;
-line-height: 48px;
-text-transform: capitalize;
-
-color: #000000;
-
-
-
-/* est qui dolorem ipsum quia dolor sit amet */
-
-position: absolute;
-width: 510px;
-height: 35px;
-left: 465px;
-top: 1688px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 26px;
-line-height: 35px;
-/* identical to box height */
-text-transform: capitalize;
-
-color: #000000;
-
-
-
-/* Group 3 */
+/* Rectangle 9 */
 
 position: absolute;
 width: 210.9px;
 height: 308px;
+left: 1186.1px;
+top: 950px;
+
+background: url(Laksa-Tangerang.png);
+border-radius: 24px;
+
+
+/* Rectangle 15 */
+
+position: absolute;
+width: 210.9px;
+height: 308px;
+left: 1186px;
+top: 950px;
+
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
+border-radius: 24px;
+
+
+/* Laksa */
+
+position: absolute;
+width: 100px;
+height: 48px;
+left: 1242px;
+top: 1080px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: 900;
+font-size: 36px;
+line-height: 48px;
+/* identical to box height */
+
+color: #FFFFFF;
+
+
+
+/* Nasi thiwul */
+
+position: absolute;
+width: 211.23px;
+height: 448px;
+left: 900px;
+top: 950px;
+
+
+
+/* Nasi thiwul adalah nasi dengan berbahan pokok dari umbi ketela pohon yang telah diolah dengan cara tertentu sehingga menjadi gaplek (dikeringkan). */
+
+position: absolute;
+width: 187px;
+height: 124px;
+left: 913px;
+top: 1274px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 16px;
+text-align: center;
+text-transform: capitalize;
+
+color: #000000;
+
+
+
+/* Rectangle 8 */
+
+position: absolute;
+width: 210.9px;
+height: 308px;
+left: 900.32px;
+top: 950px;
+
+background: url(photo6197278938296855605.jpg);
+border-radius: 24px;
+
+
+/* Rectangle 14 */
+
+position: absolute;
+width: 210.9px;
+height: 308px;
+left: 900px;
+top: 950px;
+
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
+border-radius: 24px;
+
+
+/* Nasi thiwul */
+
+position: absolute;
+width: 167px;
+height: 48px;
+left: 922px;
+top: 1080px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: 900;
+font-size: 36px;
+line-height: 48px;
+/* identical to box height */
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #FFFFFF;
+
+
+
+/* memek */
+
+position: absolute;
+width: 211.35px;
+height: 448px;
+left: 614.55px;
+top: 950px;
+
+
+
+/* Memek adalah kudapan khas Pulau Simeulue di Aceh, Indonesia. Makanan ini mirip bubur dan terbuat dari beras ketan dan pisang. */
+
+position: absolute;
+width: 187px;
+height: 124px;
+left: 626px;
+top: 1274px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 16px;
+text-align: center;
+text-transform: capitalize;
+
+color: #000000;
+
+
+
+/* Rectangle 7 */
+
+position: absolute;
+width: 210.9px;
+height: 308px;
+left: 614.55px;
+top: 950px;
+
+background: url(photo6192775338669485410.jpg);
+border-radius: 24px;
+
+
+/* Rectangle 13 */
+
+position: absolute;
+width: 210.9px;
+height: 308px;
+left: 615px;
+top: 950px;
+
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
+border-radius: 24px;
+
+
+/* Memek */
+
+position: absolute;
+width: 125px;
+height: 48px;
+left: 658px;
+top: 1080px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: 900;
+font-size: 36px;
+line-height: 48px;
+/* identical to box height */
+
+color: #FFFFFF;
+
+
+
+/* Lumpia */
+
+position: absolute;
+width: 211.13px;
+height: 448px;
+left: 328.77px;
+top: 950px;
+
+
+
+/* dikenal sebagai jajanan khas Semarang. Cita rasa lumpia adalah perpaduan rasa antara Tionghoa dan Indonesia.Lumpia terdiri dari lembaran tipis tepung gandum yang dijadikan sebagai pembungkus isian yang umumnya adalah rebung, telur, sayuran segar, daging, atau makanan laut. */
+
+position: absolute;
+width: 187px;
+height: 124px;
+left: 341px;
+top: 1274px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 16px;
+text-align: center;
+text-transform: capitalize;
+
+color: #000000;
+
+
+
+/* Rectangle 6 */
+
+position: absolute;
+width: 210.9px;
+height: 308px;
+left: 328.77px;
+top: 950px;
+
+background: url(photo6197278938296855680.jpg);
+border-radius: 24px;
+
+
+/* Rectangle 12 */
+
+position: absolute;
+width: 210.9px;
+height: 308px;
+left: 329px;
+top: 950px;
+
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
+border-radius: 24px;
+
+
+/* Lumpia */
+
+position: absolute;
+width: 131px;
+height: 48px;
+left: 369px;
+top: 1080px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: 900;
+font-size: 36px;
+line-height: 48px;
+/* identical to box height */
+
+color: #FFFFFF;
+
+
+
+/* Pudak */
+
+position: absolute;
+width: 210.9px;
+height: 448px;
 left: 43px;
 top: 950px;
+
+
+
+/* kue khas dari Kabupaten Gresik, Jawa Timur, Indonesia. Makanan ini terbuat dari bahan tepung beras, gula pasir/gula jawa dan santan kelapa yang dimasukkan kemasan yang disebut "Ope" yaitu pelepah daun pinang. */
+
+position: absolute;
+width: 187px;
+height: 124px;
+left: 55px;
+top: 1274px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 16px;
+text-align: center;
+text-transform: capitalize;
+
+color: #000000;
 
 
 
@@ -319,319 +574,55 @@ color: #FFFFFF;
 
 
 
-/* kue khas dari Kabupaten Gresik, Jawa Timur, Indonesia. Makanan ini terbuat dari bahan tepung beras, gula pasir/gula jawa dan santan kelapa yang dimasukkan kemasan yang disebut "Ope" yaitu pelepah daun pinang. */
+/* Neque porro quisquam */
 
 position: absolute;
-width: 187px;
-height: 124px;
-left: 55px;
-top: 1274px;
+width: 294px;
+height: 37px;
+left: 573px;
+top: 840px;
 
 font-family: Playfair Display;
 font-style: normal;
 font-weight: normal;
-font-size: 12px;
-line-height: 16px;
-text-align: center;
+font-size: 28px;
+line-height: 37px;
 text-transform: capitalize;
 
 color: #000000;
 
 
 
-/* dikenal sebagai jajanan khas Semarang. Cita rasa lumpia adalah perpaduan rasa antara Tionghoa dan Indonesia.Lumpia terdiri dari lembaran tipis tepung gandum yang dijadikan sebagai pembungkus isian yang umumnya adalah rebung, telur, sayuran segar, daging, atau makanan laut. */
+/* Message */
 
 position: absolute;
-width: 187px;
-height: 124px;
-left: 341px;
-top: 1274px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 16px;
-text-align: center;
-text-transform: capitalize;
-
-color: #000000;
+width: 510px;
+height: 205px;
+left: 465px;
+top: 1631px;
 
 
 
-/* Memek adalah kudapan khas Pulau Simeulue di Aceh, Indonesia. Makanan ini mirip bubur dan terbuat dari beras ketan dan pisang. */
+/* Tombol */
 
 position: absolute;
-width: 187px;
-height: 124px;
-left: 626px;
-top: 1274px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 16px;
-text-align: center;
-text-transform: capitalize;
-
-color: #000000;
+width: 243px;
+height: 84px;
+left: 599px;
+top: 1752px;
 
 
 
-/* Nasi thiwul adalah nasi dengan berbahan pokok dari umbi ketela pohon yang telah diolah dengan cara tertentu sehingga menjadi gaplek (dikeringkan). */
+/* Rectangle 17 */
 
 position: absolute;
-width: 187px;
-height: 124px;
-left: 913px;
-top: 1274px;
+width: 243px;
+height: 74px;
+left: 599px;
+top: 1762px;
 
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 16px;
-text-align: center;
-text-transform: capitalize;
-
-color: #000000;
-
-
-
-/* Laksa Tangerang bahan utamanya semacam bihun tapi tebalnya seperti spaghetti dan terbuat dari beras. Kemudian disiram dengan kuah Laksa dari kacang ijo, kentang, santan dan kaldu ayam. Sebelum disajikan masakan ini diberi taburan daun kucai yang dirajang */
-
-position: absolute;
-width: 187px;
-height: 124px;
-left: 1198px;
-top: 1274px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 16px;
-text-align: center;
-text-transform: capitalize;
-
-color: #000000;
-
-
-
-/* Group 4 */
-
-position: absolute;
-width: 211.13px;
-height: 308px;
-left: 328.77px;
-top: 950px;
-
-
-
-/* Rectangle 6 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 328.77px;
-top: 950px;
-
-background: url(photo6197278938296855680.jpg);
+background: #BF9350;
 border-radius: 24px;
-
-
-/* Rectangle 12 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 329px;
-top: 950px;
-
-background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
-border-radius: 24px;
-
-
-/* Group 5 */
-
-position: absolute;
-width: 211.35px;
-height: 308px;
-left: 614.55px;
-top: 950px;
-
-
-
-/* Rectangle 7 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 614.55px;
-top: 950px;
-
-background: url(photo6192775338669485410.jpg);
-border-radius: 24px;
-
-
-/* Rectangle 13 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 615px;
-top: 950px;
-
-background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
-border-radius: 24px;
-
-
-/* Group 6 */
-
-position: absolute;
-width: 211.23px;
-height: 308px;
-left: 900px;
-top: 950px;
-
-
-
-/* Rectangle 8 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 900.32px;
-top: 950px;
-
-background: url(photo6197278938296855605.jpg);
-border-radius: 24px;
-
-
-/* Rectangle 14 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 900px;
-top: 950px;
-
-background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
-border-radius: 24px;
-
-
-/* Group 7 */
-
-position: absolute;
-width: 211px;
-height: 308px;
-left: 1186px;
-top: 950px;
-
-
-
-/* Rectangle 9 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 1186.1px;
-top: 950px;
-
-background: url(Laksa-Tangerang.png);
-border-radius: 24px;
-
-
-/* Rectangle 15 */
-
-position: absolute;
-width: 210.9px;
-height: 308px;
-left: 1186px;
-top: 950px;
-
-background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 153, 0, 0.74) 100%);
-border-radius: 24px;
-
-
-/* Lumpia */
-
-position: absolute;
-width: 131px;
-height: 48px;
-left: 369px;
-top: 1080px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: 900;
-font-size: 36px;
-line-height: 48px;
-/* identical to box height */
-
-color: #FFFFFF;
-
-
-
-/* Memek */
-
-position: absolute;
-width: 125px;
-height: 48px;
-left: 658px;
-top: 1080px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: 900;
-font-size: 36px;
-line-height: 48px;
-/* identical to box height */
-
-color: #FFFFFF;
-
-
-
-/* Laksa */
-
-position: absolute;
-width: 100px;
-height: 48px;
-left: 1242px;
-top: 1080px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: 900;
-font-size: 36px;
-line-height: 48px;
-/* identical to box height */
-
-color: #FFFFFF;
-
-
-
-/* Nasi thiwul */
-
-position: absolute;
-width: 167px;
-height: 48px;
-left: 922px;
-top: 1080px;
-
-font-family: Playfair Display;
-font-style: normal;
-font-weight: 900;
-font-size: 36px;
-line-height: 48px;
-/* identical to box height */
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #FFFFFF;
-
 
 
 /* Rectangle 16 */
@@ -660,6 +651,75 @@ font-weight: normal;
 font-size: 36px;
 line-height: 48px;
 /* identical to box height */
+text-transform: capitalize;
+
+color: #000000;
+
+
+
+/* est qui dolorem ipsum quia dolor sit amet */
+
+position: absolute;
+width: 510px;
+height: 35px;
+left: 465px;
+top: 1688px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 26px;
+line-height: 35px;
+/* identical to box height */
+text-transform: capitalize;
+
+color: #000000;
+
+
+
+/* Neque porro quisquam */
+
+position: absolute;
+width: 378px;
+height: 48px;
+left: 531px;
+top: 1631px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 36px;
+line-height: 48px;
+/* identical to box height */
+text-transform: capitalize;
+
+color: #000000;
+
+
+
+/* Footer */
+
+position: absolute;
+width: 1442px;
+height: 103px;
+left: 0px;
+top: 1934px;
+
+
+
+/* Logo Progate Maybe? */
+
+position: absolute;
+width: 343px;
+height: 45px;
+left: 548px;
+top: 1992px;
+
+font-family: Playfair Display;
+font-style: normal;
+font-weight: normal;
+font-size: 36px;
+line-height: 48px;
 text-transform: capitalize;
 
 color: #000000;
