--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -70,3 +70,38 @@ span.menu-icon {
     padding: 21px 0;
     display: none;
 }
+
+.top-wrapper {
+    padding: 180px 0 100px 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    color: black;
+    text-align: center;
+}
+
+.top-wrapper span {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url(./../images/header.png);
+    background-size: cover;
+    opacity: .4;
+    width: 100%;
+    height: 100%;
+}
+
+.top-wrapper h1 {
+    opacity: 0.7;
+    font-size: 56px;
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+}
+
+.top-wrapper p {
+    opacity: 0.7;
+    margin-bottom: 3px;
+}
